--- a/Terometr/UserElements/HealTakenUserControl.xaml
+++ b/Terometr/UserElements/HealTakenUserControl.xaml
@@ -23,7 +23,11 @@
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
             <ComboBox x:Name="comboBox" Grid.Column="0" Padding="0" />
-            <CheckBox x:Name="checkBox" Grid.Column="1" ToolTip="В секунду?" />
+            <ToggleButton x:Name="toggleButtonDps"
+                          Grid.Column="1"
+                          Content="ЛВС"
+                          Width="30"
+                          ToolTip="В секунду" />
         </Grid>
         <ListBox Grid.Row="1"
                  x:Name="listBox" />
