--- a/Terometr/UserElements/DamageTakenUserControl.xaml
+++ b/Terometr/UserElements/DamageTakenUserControl.xaml
@@ -44,5 +44,7 @@
                           Width="30"
                           ToolTip="В секунду" />
         </Grid>
+        <ListBox Grid.Row="1"
+                 x:Name="listBox" />
     </Grid>
 </UserControl>
