--- a/Terometr/UserElements/DamageEngineUserControl.xaml
+++ b/Terometr/UserElements/DamageEngineUserControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Detrav.Terometr.UserElements.HealTakenUserControl"
+﻿<UserControl x:Class="Detrav.Terometr.UserElements.DamageEngineUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -22,15 +22,16 @@
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition />
                 <ColumnDefinition Width="Auto" />
+                
             </Grid.ColumnDefinitions>
             <Label Style="{DynamicResource labelStyle}"
                    Content="От:" />
-            <ComboBox x:Name="comboBox"
-                      Grid.Column="1"
+            <ComboBox Grid.Column="1"
+                x:Name="comboBox"
                       Padding="0" />
             <ToggleButton x:Name="toggleButtonDps"
                           Grid.Column="2"
-                          Content="ЛВС"
+                          Content="УВС"
                           Width="30"
                           ToolTip="В секунду" Click="toggleButtonDps_Click" />
         </Grid>
