Теперь кнопочки должны отображаться ормально

--- a/Terometr/Windows/MainWindow.xaml
+++ b/Terometr/Windows/MainWindow.xaml
@@ -9,7 +9,7 @@
         Topmost="True"
         ShowInTaskbar="False"
         Title="Terometr - Дпс метр"
-        MinHeight="20">
+        MinHeight="20" Loaded="Window_Loaded">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
