--- a/Terometr/UserElements/DamageEngineUserControl.xaml
+++ b/Terometr/UserElements/DamageEngineUserControl.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:Detrav="clr-namespace:Detrav.Terometr.UserElements"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Resources>
@@ -36,7 +37,6 @@
                           Width="30"
                           ToolTip="В секунду" Click="toggleButtonDps_Click" />
         </Grid>
-        <ListBox Grid.Row="1"
-                 x:Name="listBox" />
+        <Detrav:ListBarUserControl Grid.Row="2"></Detrav:ListBarUserControl>
     </Grid>
 </UserControl>
