Переделал под новую таблицу, осталось заполнить функции таблички

--- a/Terometr/UserElements/DamageEngineUserControl.xaml
+++ b/Terometr/UserElements/DamageEngineUserControl.xaml
@@ -33,6 +33,6 @@
                       Padding="0"
                       SelectionChanged="comboBox_SelectionChanged" />
         </Grid>
-        <Detrav:ListBarUserControl Grid.Row="2"></Detrav:ListBarUserControl>
+        <Detrav:ListBarUserControl x:Name="dataDamageGrid" Grid.Row="2"></Detrav:ListBarUserControl>
     </Grid>
 </UserControl>
