--- a/Terometr/UserElements/ListBarUserControl.xaml
+++ b/Terometr/UserElements/ListBarUserControl.xaml
@@ -73,7 +73,8 @@
                                   Click="ToggleButton_Click" />
                     <StackPanel Grid.Row="1"
                                 x:Name="panelName" />
-                    <Label Grid.Row="2"
+                    <Label x:Name="labelAll"
+                        Grid.Row="2"
                            Style="{DynamicResource labelStyle}">Всего</Label>
                 </Grid>
                 <Grid Grid.Column="2"
