--- a/Terometr/UserElements/ListBarUserControl.xaml
+++ b/Terometr/UserElements/ListBarUserControl.xaml
@@ -91,7 +91,8 @@
                                   Click="ToggleButton_Click" />
                     <StackPanel Grid.Row="1"
                                 x:Name="panelCrit" />
-                    <Label Grid.Row="2"
+                    <Label x:Name="labelCrt"
+                        Grid.Row="2"
                            Style="{DynamicResource labelStyle}">100%</Label>
                 </Grid>
                 <Grid Grid.Column="3"
