--- a/Terometr/Windows/MainWindow.xaml
+++ b/Terometr/Windows/MainWindow.xaml
@@ -1,5 +1,6 @@
 ﻿<Window xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:detrav="clr-namespace:Detrav.Terometr.UserElements"
         x:Class="Detrav.Terometr.Windows.MainWindow"
         Height="300"
         Width="300"
@@ -22,6 +23,7 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="16" />
+            <RowDefinition Height="Auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
         <DockPanel Background="{StaticResource TitleColor}"
@@ -105,6 +107,9 @@
                     </StackPanel>
                 </TabItem>
             </TabControl>
+        </Grid>
+        <Grid Grid.Row="2">
+            <detrav:ListBarUserControl x:Name="dataGridTable" />
         </Grid>
     </Grid>
 </Window>
